--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
                         <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
                         <h1>sonu</h1>
                         <h2>web-developer</h2>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
                         <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
                         <h1>sonu</h1>
                         <h2>web-developer</h2>
@@ -341,35 +341,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
-                        <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
-                        <h1>sonu</h1>
-                        <h2>web-developer</h2>
-                    </div>
-                </div>
-               </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
-                        <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
-                        <h1>sonu</h1>
-                        <h2>web-developer</h2>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
-                        <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
-                        <h1>sonu</h1>
-                        <h2>web-developer</h2>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
                         <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
                         <h1>sonu</h1>
                         <h2>web-developer</h2>
@@ -381,7 +353,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
                         <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
                         <h1>sonu</h1>
                         <h2>web-developer</h2>
@@ -389,7 +361,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
                         <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
                         <h1>sonu</h1>
                         <h2>web-developer</h2>
@@ -397,7 +369,35 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="box">
-                        <a href="#"><img class="image-fluid img-thumbnail" src="/images/sonu1.jpg" alt="Happy-client"></a>
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
+                        <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
+                        <h1>sonu</h1>
+                        <h2>web-developer</h2>
+                    </div>
+                </div>
+               </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="box">
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
+                        <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
+                        <h1>sonu</h1>
+                        <h2>web-developer</h2>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="box">
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
+                        <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
+                        <h1>sonu</h1>
+                        <h2>web-developer</h2>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="box">
+                        <a href="#"><img class="image-fluid img-thumbnail" src="https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu1.jpg" alt="Happy-client"></a>
                         <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ducimus?</p>
                         <h1>sonu</h1>
                         <h2>web-developer</h2>
