--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <!-- ******Navigaiton-Bar******* -->
-<div class="header" id="top-header">
+<div class="header container-fluied" id="top-header">
   
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container text-uppercase">
@@ -509,7 +509,10 @@
         <p>I'am pursuing BCA final year form MDU.
             passionate about web-development.
             and i want become full-stack developer.
-            
+           <pre class="text-white font-weight-thicker mt-3"> Email : sonusharmagju@gmail.com
+            Git-hub: sonu3323
+            contact-no :+91-8708161926
+        </pre>
         </p>
     </div>
 </div>
