--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container" id="service-full">
         <h2 class="display-4 text-success text-center text-uppercase" id="service-h2">What do i offer!</h2>
         <p id="service-para" class=" text-uppercase text-info font-weight-bold text-center">Technical Skills :-</p>
-        <div class="row">
+        <div class="row text-uppercase">
            <div class="col-lg-6 col-md-12 col-10 offset-1 offset-lg-0">
             <div class="names my-3">
                 <div class="names my-3">
@@ -161,9 +161,15 @@
         <div class="names my-3">
             <h2>Photoshop</h2>
          <div class="progress">
-            <div class="progress-bar bg-secondary progress-bar-striped progress-bar-animated"style="width:40%">45%</div>
+            <div class="progress-bar bg-secondary progress-bar-striped progress-bar-animated"style="width:45%">45%</div>
         </div>
     </div>
+    <div class="names my-3">
+        <h2>visual-basic</h2>
+     <div class="progress">
+        <div class="progress-bar bg-info progress-bar-striped progress-bar-animated"style="width:35%">35%</div>
+    </div>
+</div>
         </div>
         </div>
        
